--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,87 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="cn.ucai.fulishop.MainActivity">
+    -
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <LinearLayout
+        android:id="@+id/main_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/bottom_bar_taobao_bg"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/rb_NewsGood"
+            style="@style/menu_item_style"
+            android:button="@null"
+            android:checked="true"
+            android:drawableTop="@drawable/selector_menu_item_new_good"
+            android:text="新品"
+            android:textColor="@color/main_botton_text_color" />
+
+        <RadioButton
+            android:id="@+id/rb_Boutique"
+            style="@style/menu_item_style"
+            android:button="@null"
+            android:checked="false"
+            android:drawableTop="@drawable/selector_menu_item_boutique"
+            android:text="精品"
+            android:textColor="@color/main_botton_text_color" />
+
+        <RadioButton
+            android:id="@+id/rb_Category"
+            style="@style/menu_item_style"
+            android:button="@null"
+            android:checked="false"
+            android:drawableTop="@drawable/selector_menu_item_category"
+            android:text="分类"
+            android:textColor="@color/main_botton_text_color" />
+
+        <RelativeLayout style="@style/style_menu_item">
+
+            <RadioButton
+                android:id="@+id/rb_Cart"
+                style="@style/menu_item_style_cart"
+                android:button="@null"
+                android:checked="false"
+                android:drawableTop="@drawable/selector_menu_item_cart"
+                android:text="购物车"
+                android:textColor="@color/main_botton_text_color" />
+
+            <TextView
+                android:id="@+id/tv_cart_num"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="18dp"
+                android:layout_marginTop="2dp"
+                android:textColor="#fff" />
+        </RelativeLayout>
+
+        <RadioButton
+            android:id="@+id/rb_Personal"
+            style="@style/menu_item_style"
+            android:button="@null"
+            android:checked="false"
+            android:drawableTop="@drawable/selector_menu_item_personal_center"
+            android:text="我"
+            android:textColor="@color/main_botton_text_color" />
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_above="@id/main_bottom"
+        android:background="#0f0" />
+
+    <RelativeLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/main_bottom"
+        android:layout_marginBottom="1dp" />
 </RelativeLayout>
