--- a/app/src/main/res/layout/item_goods.xml
+++ b/app/src/main/res/layout/item_goods.xml
@@ -1,46 +1,42 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_goods"
+    android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/btn_white_normal"
-    android:id="@+id/layout_goods"
-    android:weightSum="1"
-    android:orientation="vertical">
-
-
-        <ImageView
-            android:id="@+id/ivGoodsThumb"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:scaleType="fitXY"
-            android:layout_gravity="center"
-            android:layout_weight="0.42"
-            android:src="@drawable/nopic" />
-
-        <TextView
-            android:id="@+id/tvGoosName"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:maxLines="2"
-            android:minLines="2"
-            android:ellipsize="end"
-            android:layout_marginBottom="3dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:text="商品名称商品名称商品名称商品名称商品名称"
-            android:textColor="#000"
-            android:textSize="13sp" />
-
-        <TextView
-            android:id="@+id/tvGoodsPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="$399.99"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:textColor="#f00"
-            android:textSize="13sp" />
-    </LinearLayout>
+    android:background="@color/white"
+    android:weightSum="1">
+    <ImageView
+        android:id="@+id/ivGoodsThumb"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:scaleType="fitXY"
+        android:layout_gravity="center"
+        android:src="@drawable/nopic"
+        android:layout_weight="0.42"/>
+    <TextView
+        android:id="@+id/tvGoodsName"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/item_good_text"
+        android:textSize="13sp"
+        android:maxLines="2"
+        android:minLines="2"
+        android:ellipsize="end"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="3dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:text="商品名称"/>
+    <TextView
+        android:id="@+id/tvGoodsPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/item_good_price"
+        android:textSize="13sp"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:text="$399.99"/>
+</LinearLayout>
