精选二级界面title

--- a/app/src/main/res/layout/activity_boutique_child.xml
+++ b/app/src/main/res/layout/activity_boutique_child.xml
@@ -17,6 +17,7 @@
             android:layout_width="25dp"
             android:layout_height="25dp" />
         <TextView
+            android:id="@+id/tv_common_title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_toRightOf="@+id/back"
