购物车跳转到订单

--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -30,18 +30,20 @@
             android:textColor="@color/google_red"
             android:text="节省：￥0"
             android:textSize="16sp"/>
+
         <TextView
             android:id="@+id/tv_cart_buy"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
             android:background="@color/main_orange"
             android:paddingLeft="30dp"
             android:paddingRight="30dp"
             android:gravity="center"
             android:text="结算"
             android:textSize="18sp"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"/>
     </RelativeLayout>
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/srl"
